@@ -2,14 +2,14 @@ Source: poker-network
 Section: libs
 Priority: optional
 Maintainer: Loic Dachary (OuoU) <loic@debian.org>
-Build-Depends-Indep: debhelper (>= 4.0.0), po-debconf, python2.3, python, python2.3-twisted, python2.3-poker-engine (>= 1.0.1), automake1.7 | automake1.9, debconf, python2.3-glade2, libglade2-dev, libtool, python2.3-dev, perl, rsync
-Standards-Version: 3.6.1.1
+Build-Depends-Indep: debhelper (>= 4.0.0), po-debconf, python2.3, python, python2.3-twisted, python2.3-poker-engine (>= 1.0.1), automake1.7 | automake1.9, debconf, python2.3-glade2, libglade2-dev, libtool, python2.3-dev, perl
+Standards-Version: 3.6.2.1
 
 Package: python2.3-poker-network
 Section: libs
 Architecture: all
 Suggests: mysql-server
-Depends: python2.3-poker-engine (>= 1.0.1), python2.3-twisted, libxml2-python2.3, python2.3-mysqldb, python2.3-pyopenssl, python-soappy, debconf, wwwconfig-common, mysql-client, apg
+Depends: python, python2.3, python2.3-poker-engine (>= 1.0.1), python2.3-twisted, libxml2-python2.3, python2.3-mysqldb, python2.3-pyopenssl, python-soappy, debconf, wwwconfig-common, mysql-client, apg, rsync
 Description: multiplayer poker server and client library
  The server deals the cards and checks the user actions using a poker
  game engine (poker-engine). It can handle all the poker variants
